cluster/home-assistant/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: home-assistant
    version: "2024.2.2"
  name: home-assistant
  namespace: home-assistant
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
        version: "2024.2.2"
    spec:
      containers:
      - name: app
        image: "ghcr.io/home-assistant/home-assistant:2024.2"
        imagePullPolicy: IfNotPresent
        securityContext:
          privileged: true
          runAsNonRoot: false
          capabilities:
            add:
              - CAP_NET_RAW  # Fix https://github.com/home-assistant/core/issues/62188
            # drop:
            #   - ALL
          seccompProfile:
            type: RuntimeDefault
        ports:
          - name: http
            containerPort: 8123
            protocol: TCP
          - name: udp-ssdp
            containerPort: 1900
            protocol: UDP
          - name: udp-ssdp-2
            containerPort: 1901
            protocol: UDP
          - name: udp-mdns
            containerPort: 5353
            protocol: UDP
          - name: udp-unicast
            containerPort: 5683
            protocol: UDP
          - name: udp-homekit
            containerPort: 51827
            protocol: UDP
          - name: udp-netbios-ns
            containerPort: 137
            protocol: UDP
          - name: udp-netbios-dg
            containerPort: 138
            protocol: UDP
          - name: udp-netbios-ss
            containerPort: 139
            protocol: UDP
          - name: udp-printer
            containerPort: 515
            protocol: UDP
          - name: udp-filemaker
            containerPort: 5003
            protocol: UDP
          - name: tcp-sonos
            containerPort: 1400
            protocol: TCP
          - name: tcp-sonos-tts
            containerPort: 1443
            protocol: TCP
        resources:
          limits:
            cpu: 2
            memory: 2Gi
          requests:
            cpu: 500m
            memory: 512Mi
        livenessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 0
          failureThreshold: 3
          timeoutSeconds: 1
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 0
          failureThreshold: 3
          timeoutSeconds: 1
          periodSeconds: 10
        startupProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 0
          failureThreshold: 30
          timeoutSeconds: 1
          periodSeconds: 5
        volumeMounts:
          - name: ha-config-root
            mountPath: /config
          - name: home-assistant-config-files
            mountPath: /config/configuration.yaml
            subPath: configuration.yaml
          - name: home-assistant-config-files
            mountPath: /config/automations.yaml
            subPath: automations.yaml
          - name: home-assistant-config-files
            mountPath: /config/scenes.yaml
            subPath: scenes.yaml
          - name: home-assistant-config-files
            mountPath: /config/scripts.yaml
            subPath: scripts.yaml
          - name: home-assistant-secrets
            mountPath: /config/secrets.yaml
            subPath: secrets.yaml
          - name: ttyusb0
            mountPath: /dev/ttyUSB0
      restartPolicy: Always
      volumes:
        - name: ha-config-root
          persistentVolumeClaim:
            claimName: home-assistant-config-root
        - name: home-assistant-config-files
          configMap:
            name: home-assistant-config-files
            optional: true
        - name: home-assistant-secrets
          secret:
            secretName: home-assistant-secrets
            optional: true
        - name: ttyusb0
          hostPath:
            path: /dev/ttyUSB0
            type: CharDevice
