cluster/home-assistant/base/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: home-assistant
  name: home-assistant
  namespace: home-assistant
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8123
      targetPort: http
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: home-assistant
  name: home-assistant-udp
  namespace: home-assistant
  annotations:
    metallb.universe.tf/loadBalancerIPs: 10.22.27.251   # use "sudo nmap -sU -v 10.22.27.251" to run a port scan
    metallb.universe.tf/allow-shared-ip: home-net
spec:
  type: LoadBalancer
  ports:
    - name: udp-ssdp
      port: 1900
      targetPort: udp-ssdp
      protocol: UDP
    - name: udp-ssdp-2
      port: 1901
      targetPort: udp-ssdp-2
      protocol: UDP
    - name: udp-mdns
      port: 5353
      targetPort: udp-mdns
      protocol: UDP
    - name: udp-unicast
      port: 5683
      targetPort: udp-unicast
      protocol: UDP
    - name: udp-homekit
      port: 51827
      targetPort: udp-homekit
      protocol: UDP
    - name: udp-netbios-ns
      port: 137
      targetPort: udp-netbios-ns
      protocol: UDP
    - name: udp-netbios-dg
      port: 138
      targetPort: udp-netbios-dg
      protocol: UDP
    - name: udp-netbios-ss
      port: 139
      targetPort: udp-netbios-ss
      protocol: UDP
    - name: udp-printer
      port: 515
      targetPort: udp-printer
      protocol: UDP
    - name: udp-filemaker
      port: 5003
      targetPort: udp-filemaker
      protocol: UDP
    - name: tcp-sonos
      port: 1400
      targetPort: tcp-sonos
      protocol: TCP
    - name: tcp-sonos-announce
      port: 1443
      targetPort: tcp-sonos-tts
      protocol: TCP
